# minor-projects

./: .gitignore  CLAUDE.md  README.md
prototypes/pdf-processing/pdf-filename-annotator/: .gitignore  2025-march-29-process_and_project_context.md  CLAUDE.md  Cargo.toml  FONT_ISSUE_FIX.md  IMPLEMENTATION_SUMMARY.md  PDF_ANNOTATOR_FIX_SUMMARY.md  PDF_STARTUP_INSTRUCTIONS.md  PROJECT_REVIEW.md  PROJECT_REVIEW_WITH_CODE.md  PROJECT_REVIEW_WITH_CODE_CONTINUED.md  PROJECT_SUMMARY.md  README.md  README_PATCH.md  SCANNER_PDF_ANALYSIS.md  SESSION_RESET_PROTOCOL.md  SESSION_TEMPLATE.md  SPECIFICATION.md  SRS_SPEC.md  TASK.md  TEST_RESULTS.md  annotation_summary.md  config.example.json  consolidate_files.py  consolidate_spec_files.py  fix_pdf_annotator.py  generate_fixed_files.sh  real_world_test.json  restructure_directories.sh  restructure_log.txt  restructure_summary.md  review-reply-oid.md  run_annotation.sh  test_config.json  test_subset.txt  test_subset_config.json  verify.sh  verify_annotations.py
prototypes/pdf-processing/pdf-filename-annotator/agents/: README.md
prototypes/pdf-processing/pdf-filename-annotator/configs/: config-7SCID.json  config-7SCIF.json  config-7SCIG.json  config-7SCIO.json  config-7SCIR.json  config-7SCIS.json
prototypes/pdf-processing/pdf-filename-annotator/docs/: API_REFERENCE.md  ARCHITECTURE.md  BUILD_GUIDE.md  FAQ.md  INSTALLATION.md  MULTIPLE_CHOICE_GUIDE_README.md  ROADMAP.md  USER_GUIDE.md
prototypes/pdf-processing/pdf-filename-annotator/fixed_files/: IMPLEMENTATION_PLAN.md  README.md
prototypes/pdf-processing/pdf-filename-annotator/patches/: 01_fix_page_ids.patch  02_unified_annotation.patch  03_add_unified_page_annotation.patch  04_fix_page_tree.patch
prototypes/pdf-processing/pdf-filename-annotator/process/: AI_COLLABORATION_PROTOCOL.md  CONTEXT_MANAGEMENT_GUIDE.md  README.md  TASK_CHECKLIST_TEMPLATE.md  TASK_COMMAND_LOG_TEMPLATE.md  TASK_DESCRIPTION_TEMPLATE.md  TASK_STEP_LOG_TEMPLATE.md  TASK_SUMMARY_TEMPLATE.md  create_task.sh
prototypes/pdf-processing/pdf-filename-annotator/project/: API_CORRECTIONS.md  BUILD_VERIFICATION.md  CHECKLIST.md  CURRENT_STATE.md  IMPLEMENTATION_METHODOLOGY.md  IMPLEMENTATION_SOLUTION.md  ISSUE_ANALYSIS.md  LEARNING_LOG.md  MULTIPLE_CHOICE_MARKING_GUIDE_PLAN.md  PRECISE_IMPLEMENTATION_PLAN.md  PROJECT_STATUS.md  SCANNER_PDF_IMPLEMENTATION_PLAN.md  VERIFICATION_PLAN.md  VERSION_HISTORY.md
prototypes/pdf-processing/pdf-filename-annotator/prompt_updating/: auto_prompt_update.md  prompt_one
prototypes/pdf-processing/pdf-filename-annotator/prototypes/: ocr_config.json  ocr_integration.py
prototypes/pdf-processing/pdf-filename-annotator/review/: IMPLEMENTATION_SOLUTION.md  code_review.md  implementation_approach.md
prototypes/pdf-processing/pdf-filename-annotator/scripts/: process_pdfs.sh  verify_annotations.py
prototypes/pdf-processing/pdf-filename-annotator/src/: annotation.rs  config.rs  error.rs  file_utils.rs  filesystem.rs  lib.rs  main.rs  mc_pdf_utils.rs  pdf.rs  pdf_annotation_utils.rs.bak  pdf_utils.rs  processor.rs  processor_fixed.rs.back  scanner_diagnostic.rs  scanner_diagnostic.rs.tmp
prototypes/pdf-processing/pdf-filename-annotator/tasks/: new_tasks.md
prototypes/pdf-processing/pdf-filename-annotator/test_run/: config.json  config_final.json  config_updated.json  config_updated2.json  (+8 more)
prototypes/pdf-processing/pdf_exam_tools_lib/: Cargo.toml
(+527 files in other folders)
