[package]
name = "pdf_exam_tools_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "^1.0.58"
lopdf = "0.36.0"                                        # Or the version you are using
serde = { version = "^1.0.197", features = ["derive"] }
serde_json = "^1.0.115"
# File handling
walkdir = "^2.5.0"
# Error handling
anyhow = "^1.0.81"
