[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"
authors = ["Claude <claude@anthropic.com>"]
description = "A simple Hello World application demonstrating structured SDLC"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^4.4.6", features = ["derive"] }

[dev-dependencies]
assert_cmd = "^2.0.12"
predicates = "^3.0.3"
